--- a/idsa_frontend/package.json
+++ b/idsa_frontend/package.json
@@ -22,6 +22,7 @@
     "@mui/material": "^5.14.19",
     "axios": "^1.6.1",
     "bootstrap": "^5.3.2",
+    "history": "^5.3.0",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.8.0",
     "react-dom": "^18.2.0",
